--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,9 +46,12 @@ apply from: 'capacitor.build.gradle'
 
 try {
     def servicesJSON = file('google-services.json')
-    if (servicesJSON.text) {
+    if (servicesJSON.exists()) {
         apply plugin: 'com.google.gms.google-services'
+        logger.info("google-services.json found, applying plugin")
+    } else {
+        logger.warn("google-services.json not found, push notifications may not work correctly")
     }
 } catch(Exception e) {
-    logger.info("google-services.json not found, google-services plugin not applied. Push Notifications won't work")
+    logger.error("Error checking for google-services.json: " + e.message)
 }
