--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "npm run build && node ftp-deploy.js"
   },
   "dependencies": {
     "@capacitor/android": "^8.1.0",
@@ -19,6 +20,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.95.3",
     "@types/leaflet": "^1.9.21",
+    "basic-ftp": "^5.1.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
     "leaflet": "^1.9.4",
