--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/keyboard": "^8.0.0",
     "@capacitor/push-notifications": "^8.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/leaflet": "^1.9.21",
     "basic-ftp": "^5.1.0",
