--- a/.github/workflows/deploy-apk.yml
+++ b/.github/workflows/deploy-apk.yml
@@ -35,15 +35,19 @@ jobs:
           echo "Found APK at $APK_PATH"
           cp "$APK_PATH" deploy/avoska.apk
 
+      - name: Get version from package.json
+        id: pkg_version
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
       - name: Upload to Release
         if: hashFiles('deploy/avoska.apk') != ''
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v0.1.0
-          name: Android App v0.1.0
-          body: "Обновление приложения (v0.1.0)"
-          files: deploy/avoska.apk
-          prerelease: false
-          make_latest: true
+            tag_name: v${{ steps.pkg_version.outputs.version }}
+            name: Android App v${{ steps.pkg_version.outputs.version }}
+            body: "Автоматическое обновление приложения до версии v${{ steps.pkg_version.outputs.version }}"
+            files: deploy/avoska.apk
+            prerelease: false
+            make_latest: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
