--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -27,12 +27,9 @@ jobs:
           mkdir -p deploy-ftp
           cd out && zip -r ../deploy-ftp/avoska.zip . -x avoska.zip
 
-      - name: Sync files via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
-          server: konkevlk.beget.tech
-          username: konkevlk_boss
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./deploy-ftp/
-          server-dir: /avoska.353290.ru/public_html/
-          dangerous-clean-slate: false # Keep existing files (like .htaccess or uploads)
+      - name: Deploy to Beget (FTP)
+        run: |
+          node ftp-deploy.js
+          node remote-unzip.js
+        env:
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
